# ur_softhand_dual

./: .all-contributorsrc  README.md
Demos/: demo.yaml  demo_loop.yaml  home.py  rec.py
scripts/: merge.py  test_joints.py
src/gripper_description/: CMakeLists.txt  LICENSE  package.xml
src/gripper_description/config/: controller.yaml
src/gripper_description/launch/: control.launch.py  test_urcap.py  view_robot.launch.py
src/gripper_description/rviz/: urdf.rviz
src/gripper_description/urdf/: mimic_fix.urdf.xacro  onrobot_2fg7.xacro  onrobot_2fg7_upload.xacro
src/qbdevice-ros/: README.md
src/qbdevice-ros/qb_device/: CHANGELOG.rst  package.xml
src/qbdevice-ros/qb_device_bringup/: CHANGELOG.rst  package.xml
src/qbdevice-ros/qb_device_driver/: CHANGELOG.rst  package.xml
src/qbdevice-ros/qb_device_msgs/: CHANGELOG.rst  package.xml
src/qbdevice-ros/qb_device_ros2_control/: CHANGELOG.rst  package.xml
src/qbdevice-ros/qb_device_test_controllers/: CHANGELOG.rst  package.xml
src/qbhand-ros/: LICENSE  README.md
src/qbhand-ros/qb_hand/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/qbhand-ros/qb_hand_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/qbhand-ros/qb_hand_description/launch/: bringup_qbhand.launch  bringup_qbhand2m.launch
src/qbhand-ros/qb_hand_description/rviz/: display.rviz
src/qbhand-ros/qb_hand_description/urdf/: qbhand.utils.xacro  qbhand2m.urdf.xacro
src/qbhand-ros/qb_hand_ros2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  qb_hand_ros2_control.xml
src/ur_dual_control/: CMakeLists.txt  package.xml
src/ur_dual_control/config/: ros2_controllers.yaml  ur_controllers.yaml  ur_dual_D_controllers.yaml  ur_dual_D_kinematics.yaml  ur_dual_I_controllers.yaml  ur_dual_I_kinematics.yaml  ur_dual_controllers.yaml
src/ur_dual_control/launch/: dual_arms.launch.py  rsp.launch.py  start_robot.launch.py  ur_control.launch.py
src/ur_dual_control/urdf/: ur_dual_controlled.urdf.xacro
src/ur_dual_description/: CMakeLists.txt  package.xml
src/ur_dual_description/launch/: view_robot.launch.py
src/ur_dual_description/rviz/: urdf.rviz
src/ur_dual_description/urdf/: ur_dual.urdf.xacro  ur_dual_macro.xacro
src/ur_dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_dual_moveit_config/config/: joint_limits.yaml  (+6 more)
(+14 files in other folders)
