<package format="2">
  <name>qb_hand</name>
  <version>4.0.3</version>
  <description>
    This package contains the ROS interface for qbrobotics® qbhand device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">qb Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbhand-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbhand-ros</url>
  <url type="website">http://wiki.ros.org/qb_hand</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>qb_hand_ros2_control</exec_depend>
  <exec_depend>qb_hand_description</exec_depend>
  <exec_depend>qb_device</exec_depend>

  <export>
    
    <build_type>ament_cmake</build_type>
  </export>
</package>